--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>Título da Página</title>
 </head>
 <body>
-    <h1>Aqui vai um título</h1>
+    <h1>Perfil #catsoninstagram</h1>
+    <img src="nomes-de-cachorro.jpg">
 </body>
 </html>
